<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.glroland.sudoku</groupId>
	<artifactId>sudoku</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>
	<properties>
    		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<dependency-check-format>HTML</dependency-check-format>
		<dependency-check-failscore>8</dependency-check-failscore>
        </properties>

	<modules>
		<module>sudoku-lib</module>
		<module>sudoku-svc</module>
	</modules>

	<dependencies>
		<dependency>
    			<groupId>junit</groupId>
    			<artifactId>junit</artifactId>
    			<version>4.13.1</version>
    			<scope>test</scope>
		</dependency>
	</dependencies>


<build>

<pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
    </plugins>
</pluginManagement>
</build>

</project>
